# wasm-game-sdl-canvas-arkanoid

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  package.json
distr/: game_arkanoid.wasm.js  game_arkanoid.wasm.wasm
include/: ball.h  basic.h  border.h  bricks.h  core.h  field.h  platform.h
public/: index.html
src/: ball.cpp  border.cpp  bricks.cpp  core.cpp  field.cpp  platform.cpp
